--- a/docs/source/release-notes/v1.10.0.rst
+++ b/docs/source/release-notes/v1.10.0.rst
@@ -9,12 +9,12 @@ InfinniPlatform 1.10.0
 
 Появилась возможность добавлять задачи, которые будут выполняться в фоновом режиме по
 заданному расписанию. При этом учитывается возможность развертывания приложения в
-кластерной инфраструктуре, благодаря чему выполнение заданий распеределяется по
+кластерной инфраструктуре, благодаря чему выполнение заданий распределяется по
 узлам кластера.
 
 Для диспетчеризации заданий используется популярная и очень мощная библиотека Quartz.NET_.
 Недавно авторами этого проекта был анонсирован переход на .NET Core, что способствовало выбору
-данного иструмента. Благодаря Quartz.NET стало возможным использование такого гибкого инструмента
+данного инструмента. Благодаря Quartz.NET стало возможным использование такого гибкого инструмента
 планирования, как :doc:`выражения CRON </17-scheduler/scheduler-cronexpression>`.
 
 Ко всему прочему добавлен механизм :doc:`управления планировщиком заданий </17-scheduler/scheduler-jobscheduler>`
@@ -25,3 +25,24 @@ InfinniPlatform 1.10.0
 
 
 .. _Quartz.NET: https://www.nuget.org/packages/Quartz
+
+Очередь сообщений
+-----------------
+
+:ref:`Добавлена возможность <queue-settings>` управлять количеством сообщений, единовременно передаваемых получателю,
+что позволит быстрее освобождать очередь, а также снизить время на сетевое взаимодействие между сервером приложений и сервером очереди сообщений.
+
+:ref:`Добавлена возможность <queue-settings>` устанавливать масимальное количество потоков обработки сообщений получателем.
+При работе с асинхронными методами без такого ограничения может возникнуть слишком большое количество потоков,
+что может привести к ошибкам и негативно сказаться на производительности.
+
+.NET Framework 4.5.2
+-------------------
+
+Выполнен переход на версию 4.5.2 .NET Framework, т.к. эта версия требуется для последних версий используемых сторонних Nuget-пакетов.
+При переходе на новый релиз нужно изменить значение используемой версии .NET в файле ``InstallPlatform.ps1``:
+
+.. code-block:: powershell
+
+	[Parameter(HelpMessage = "Version of the .NET.")]
+	[String] $framework = 'net452'
